Add trailing backslash to baseURL string

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://nturblog.netlify.com"
+baseURL = "https://nturblog.netlify.com/"
 languageCode = "en-gb"
 title = "ntur"
 theme = "kiss"
